<resources>
    <string name="app_name">Groceries</string>
    <string name="root_url" translatable="false">http://88.159.34.253:6438</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="negative">no</string>
    <string name="positive">yes</string>
    <string name="title_lists">My Lists</string>
    <string name="title_friends">Friends</string>
    <string name="title_suggestions">Suggestions</string>
    <string name="title_bugs">Bugs</string>
    <string name="title_settings">Settings</string>
    <string name="title_my_profile">My Profile</string>
    <string name="title_products">My Products</string>
    <string name="toolbar_title_new_list">New List</string>
    <string name="toolbar_title_profile">Profile</string>
    <string name="toolbar_title_new_product">New Product</string>
    <string name="toolbar_title_search_user">Search User</string>
    <string name="nav_drawer_home">Home</string>
    <string name="nav_drawer_logout">Logout</string>
    <string name="nav_drawer_group_communication">Communication</string>
    <string name="placeholder_name" translatable="false">Hank Hankinson</string>
    <string name="placeholder_title" translatable="false">Beautiful Title</string>
    <string name="placeholder_text" translatable="false">Text</string>
    <string name="placeholder_email" translatable="false">mail@mail.com</string>
    <string name="placeholder_number" translatable="false">25</string>
    <string name="placeholder_decimal" translatable="false">12.00</string>
    <string name="placeholder_date" translatable="false">15–03–2015</string>
    <string name="placeholder_desc" translatable="false">This is a description.</string>
    <string name="placeholder_paragraph" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec varius nisi, a mattis erat. Etiam sit amet orci et risus imperdiet vehicula vitae in sapien. Donec a tellus a odio laoreet elementum. Ut tempor sem ac viverra volutpat. Pellentesque efficitur, ipsum a suscipit elementum, leo ipsum aliquet dui, sit amet accumsan diam arcu et velit</string>
    <string name="button_goto_register">Register</string>
    <string name="button_goto_login">Login</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="product_hint_name">Name…</string>
    <string name="product_hint_amount" translatable="false">1</string>
    <string name="product_hint_comment">Comment…</string>
    <string name="new_list_name">New list name</string>
    <string name="my_products_tip_description">You have %1$d personal products.\nAdd a photo to help your friends find your products faster!</string>
    <string name="my_products_tip_title">Tip</string>
    <string name="my_products_title_photo">Photo</string>
    <string name="my_products_title_name">Name</string>
    <string name="my_products_title_amount">Amount</string>
    <string name="my_products_title_comment">Comment</string>
    <string name="search_user_title">Search user</string>
    <string name="search_user_button">Search!</string>
    <string name="product_button_add">Add product!</string>
    <string name="product_delete_warning">Do you want to remove this product?</string>
    <string name="button_update_product">Update product!</string>
    <string name="suggestion_title">Do you have a suggestion which could improve this app?\nType below!</string>
    <string name="suggestion_hint">Suggestion…</string>
    <string name="suggestion_button_send">Send feedback!</string>
    <string name="bug_when">Have you experienced a bug? Please enter when it happened below.</string>
    <string name="bug_what">What happened?</string>
    <string name="bug_hint_what">For example: The app crashed…</string>
    <string name="bug_hint_when">Example: when I pressed \'+\' at friends…</string>
    <string name="bug_button_send">Send bug!</string>
    <string name="button_friend_add">Add friend!</string>
    <string name="description_profile_picture">Profile picture</string>
    <string name="account_not_found">Could not find account. Redirecting to login page.</string>
    <string name="no_list_found">No list found</string>
</resources>