<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/minimal_margin"
    android:paddingTop="@dimen/minimal_margin">

    <TextView
        android:id="@+id/tvName"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/minimal_margin"
        android:layout_marginRight="@dimen/minimal_margin"
        android:layout_weight="0.25"
        android:text="@string/my_products_title_name"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvAmount"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/minimal_margin"
        android:layout_marginRight="@dimen/minimal_margin"
        android:layout_weight="0.10"
        android:text="@string/my_products_title_amount" />

    <TextView
        android:id="@+id/tvComment"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/minimal_margin"
        android:layout_marginRight="@dimen/minimal_margin"
        android:layout_weight="0.40"
        android:text="@string/my_products_title_comment" />

</LinearLayout>
