<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/spacing_large"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        android:src="@drawable/grocery_placeholder" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_toEndOf="@id/ivPhoto"
        android:layout_toLeftOf="@+id/tvOwner"
        android:layout_toRightOf="@id/ivPhoto"
        android:layout_toStartOf="@+id/tvOwner"
        android:orientation="vertical"
        android:paddingEnd="@dimen/spacing_short"
        android:paddingLeft="@dimen/spacing_short"
        android:paddingRight="@dimen/spacing_short"
        android:paddingStart="@dimen/spacing_short">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/placeholder_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/placeholder_desc"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        android:ellipsize="end"
        android:maxLines="1"
        android:maxWidth="100dp"
        android:text="@string/placeholder_name"
        android:textAppearance="?android:attr/textAppearanceSmall" />
</RelativeLayout>
